--- a/ManejoPresupuesto/Views/Cuentas/Index.cshtml
+++ b/ManejoPresupuesto/Views/Cuentas/Index.cshtml
@@ -67,7 +67,7 @@
                                 var claseCuenta = ObtenerClaseBalance(cuenta.Balance);
                                 <li class="list-group-item">
                                     <span>
-                                        <strong>@cuenta.Nombre</strong>
+                                    <strong><a asp-action="Detalle" asp-route-id="@cuenta.Id">@cuenta.Nombre</a></strong>
                                     <a asp-action="Editar" asp-route-id=" @cuenta.Id" class="btn btn-primary">
                                         <i class="bi-pencil-fill"></i>
                                     </a>   
