--- a/ManejoPresupuesto/Views/TiposCuentas/Crear.cshtml
+++ b/ManejoPresupuesto/Views/TiposCuentas/Crear.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Crear Tipo Cuenta</h1>
-<h5>Ejemplos: Prestamos, tarjetas de credito</h5>
+<h5>Ejemplos: Prestamos, Tarjetas de Credito</h5>
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     @*muestra los TODOS "all" los errores y los pinta de rojo "text-danfer"*@
