--- a/ManejoPresupuesto/Views/Transacciones/Index.cshtml
+++ b/ManejoPresupuesto/Views/Transacciones/Index.cshtml
@@ -1,6 +1,12 @@
-﻿
-@{
-    ViewData["title"] = "Transacciones";
-}
+﻿@model ReporteTransaccionesDetalladas
 
-<h1>Indice de transacciones</h1>
+@{
+    ViewData["title"] = "Reporte Diario";
+}
+<partial name="_Submenu" Model="SubMenuTransacciones.Diario" />
+
+<div class="mt-3 mb-3">
+    <a asp-action="Crear" class="btn btn-primary">Crear Nueva Transacción</a>
+</div>
+
+<partial name="_ReporteTransaccionesDetalladas" model="Model" />
