--- a/ManejoPresupuesto/Views/Usuarios/Registro.cshtml
+++ b/ManejoPresupuesto/Views/Usuarios/Registro.cshtml
@@ -5,26 +5,32 @@
 }
 
 <h1>Registro</h1>
+<div class="card">
+    <div class="card-body">
+        <form asp-action="Registro">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<form asp-action="Registro">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="mb-3">
+                <label asp-for="Email" class="form-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
 
-    <div class="mb-3">
-        <label asp-for="Email" class="form-label"></label>
-        <input asp-for="Email" class="form-control"/>
-        <span asp-validation-for="Email" class="text-danger"></span>
+            <div class="mb-3">
+                <label asp-for="Password" class="form-label"></label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+
+            <button class="btn btn-primary">Registrate</button>
+            <a class="btn btn-success" asp-action="Login">Deseo Loguearme</a>
+        </form>
+
     </div>
+</div>
 
-    <div class="mb-3">
-        <label asp-for="Password" class="form-label"></label>
-        <input asp-for="Password" type="password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-
-    <button class="btn btn-primary">Registrate</button>
-</form>
 
 @section Scripts
-{
+    {
     <partial name="_ValidationScriptsPartial" />
 }
