--- a/ManejoPresupuesto/Views/Categorias/Index.cshtml
+++ b/ManejoPresupuesto/Views/Categorias/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Categoria>
+﻿@model PaginacionRespuesta<Categoria>
 
 @{
     ViewData["Title"] = "Categorias";
@@ -6,35 +6,61 @@
 }
 
 <h1>Categorias</h1>
-<h5>Las categorias nos permiten indicar en que nos gastamos el dinero,
-    tambien de donde provienen nuestros ingresos.</h5>
+<h5>
+    Las categorias nos permiten indicar en que nos gastamos el dinero,
+    tambien de donde provienen nuestros ingresos.
+</h5>
 
-    <a asp-action="Crear" class="btn btn-primary">Crear Nuevo</a>
+<a asp-action="Crear" class="btn btn-primary">Crear Nuevo</a>
 
-    <table class="table">
-        <thead>
+<div class="row">
+    <label>Cantidad de registros a mostrar:</label>
+    <div class="mb-3 col-auto">
+        <select asp-for="@Model.RecordsPorPagina" id="cantidadRecordsPorPagina" class="form-select">
+            <option>3</option>
+            <option>5</option>
+            <option>10</option>
+            <option>25</option>
+        </select>
+    </div>
+</div>
+
+<partial name="_paginacion" />
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Acciones</th>
+            <th>Nombre</th>
+            <th>Tipo</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var categoria in Model.Elementos)
+        {
             <tr>
-                <th>Acciones</th>
-                <th>Nombre</th>
-                <th>Tipo</th>
+                <td>
+                    <a class="btn btn-primary" asp-action="Editar" asp-route-id="@categoria.Id">Editar</a>
+                    <a class="btn btn-danger" asp-action="Borrar" asp-route-id="@categoria.Id">Borrar</a>
+                </td>
+                <td>
+                    @categoria.Nombre
+                </td>
+                <td>
+                    @categoria.TipoOperacionId.ToString()
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var categoria in Model)
-            {
-                <tr>
-                    <td>
-                        <a class="btn btn-primary" asp-action="Editar" asp-route-id="@categoria.Id">Editar</a>
-                        <a class="btn btn-danger" asp-action="Borrar" asp-route-id="@categoria.Id">Borrar</a>
-                    </td>
-                    <td>
-                        @categoria.Nombre
-                    </td>
-                    <td>
-                        @categoria.TipoOperacionId.ToString()
-                    </td>
-                </tr> 
         }
     </tbody>
 
-    </table>
+</table>
+
+@section Scripts {
+    <script>
+        $("#cantidadRecordsPorPagina").change(function () {
+            const recordsPorPagina = $(this).val();
+            location.href = `/categorias/?pagina=1&recordsPorPagina=${recordsPorPagina}`
+            });
+    </script>
+}
+
